welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:9: error: not found: value nombre
for (compteur<-1 to nombre de pas){
                    ^Program:9: error: not found: value pas
for (compteur<-1 to nombre de pas){
                              ^